# tdd

./: CMakeLists.txt  Fibonacci.cpp  Fibonacci.hpp  calc_test.cpp  calculator.hpp  calculator_impl.hpp  calculator_optimizer.hpp  fib_test.cpp  main.cpp  people_test.cpp  schwein.cpp  stack.h  stack_test.cpp  test.cpp  tiere_test.cpp
fake/: dependency_to_fake.h  myservice_using_dependency_test.cpp  myservice_using_dependency_test.h
gui/: EuroToDollarCalculatorApplication.h  EuroToDollarCalculatorApplicationTest.cpp  EuroToDollarCalculatorApplicationTest.h  euro_to_dollar_presenter_impl.h  test_euro_to_dollar_presenter.cpp
people/: Person.h  PersonRepositoryMock.h  person_service_impl.cpp  person_service_impl.h
